[gd_scene load_steps=8 format=3 uid="uid://bltib2icqlg5m"]

[ext_resource type="Script" path="res://Assets/Entities/Boar/Boar.gd" id="1_rkytx"]
[ext_resource type="SpriteFrames" uid="uid://ohc5dwp5asux" path="res://Assets/Entities/Boar/Boar.tres" id="2_f7022"]
[ext_resource type="Resource" uid="uid://cefaexokhyadh" path="res://Assets/Entities/Boar/Die/OnBoarDeath.tres" id="2_scr4u"]
[ext_resource type="PackedScene" uid="uid://b0n5vt2twjyg" path="res://Assets/HurtBox/HurtBox.tscn" id="4_8h464"]
[ext_resource type="PackedScene" uid="uid://c1f8yg4kt8fpd" path="res://Assets/HitBox/HitBox.tscn" id="4_mojkc"]
[ext_resource type="Resource" uid="uid://q37oo7seq5x4" path="res://Assets/Entities/Boar/BoarHurtStats.tres" id="5_xs46p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s5pft"]
radius = 7.0

[node name="Boar" type="RigidBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 4
gravity_scale = 0.0
script = ExtResource("1_rkytx")
death = ExtResource("2_scr4u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
rotation = -3.14159
scale = Vector2(1, -1)
sprite_frames = ExtResource("2_f7022")
animation = &"death"
autoplay = "default"

[node name="HitBox" parent="." instance=ExtResource("4_mojkc")]
position = Vector2(16, -5)

[node name="HurtBox" parent="." instance=ExtResource("4_8h464")]
collision_layer = 4
hurt_stats = ExtResource("5_xs46p")

[node name="Trail" type="CPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 20
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 30.3
scale_amount_max = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_s5pft")

[connection signal="on_death" from="HurtBox" to="." method="_on_death"]
[connection signal="on_hit" from="HurtBox" to="." method="_on_hit"]
[connection signal="on_knockback" from="HurtBox" to="." method="_on_knockback"]
